# automatic-sokoban-solver

./: CMakeLists.txt  LICENSE  README.md  TT.R  run_build.sh
include/: game_node.h  game_solver.h  mazesolver.h  point.h  repeat.h  solver_template.h
sokoban_project/: CMakeLists.txt  README.md  main.cpp
sokoban_project/include/: constant.h  draw.h  game_node.h  game_solver.h  locked.h  mazesolver.h  my_memory.h  point.h  repeat.h
sokoban_project/resource/: box.txt
sokoban_project/src/: constant.cpp  draw.cpp  game_node.cpp  game_solver.cpp  locked.cpp  main.cpp  mazesolver.cpp  my_memory.cpp  point.cpp  repeat.cpp
src/: constant.cpp  draw.cpp  game_node.cpp  locked.cpp  main.cpp  point.cpp  repeat.cpp
代码/: box.txt  box_solver.rc  constant.h  draw.h  game_node.h  game_solver.h  locked.h  mazesolver.h  point.h  repeat.h  resource.h  源.cpp
代码/Include/: easyx.h  graphics.h
代码/lib/VC2013/x64/: EasyXa.lib  EasyXw.lib
代码/lib/VC2013/x86/: EasyXa.lib  EasyXw.lib
代码/lib/VC2017/x64/: EasyXa.lib  EasyXw.lib
代码/lib/VC2017/x86/: EasyXa.lib  EasyXw.lib
代码/lib/VC6/x86/: EasyXa.lib  EasyXw.lib
想直接使用点这里/: box.txt  说明.txt
推箱子破解程序_可以直接运行/: box.txt  说明.txt
资源网站/: A星.txt  mysql Capi.txt  割点.txt  多线程.txt  数据库存储转移.txt  新建文本文档.txt
